--- a/analysis/toy_p.Rmd
+++ b/analysis/toy_p.Rmd
@@ -9,6 +9,7 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
+## Main Result
 
 `flashier` setting:
 
@@ -35,7 +36,6 @@ fig.one.K2 <- function(fit, title){
     geom_abline(slope=0)+xlab("index")+ylab("L") -> fig
   return(fig)
 }
-
 
 plot.for.p <- function(set.p){
     
@@ -84,4 +84,134 @@ plot.for.p(10000)
 plot.for.p(30000)
 plot.for.p(100000)
 plot.for.p(300000)
+```
+
+
+## Running `flashier` on X, cov(X), cov(X) with missing diagonals 
+
+
+```{r, fig.width=6, fig.height=2}
+plot.for.p.v2 <- function(set.p, seed){
+    
+    fig <- list()
+    set.seed(seed)
+      
+      # create X
+      p = set.p
+      n = 20
+      f = list()
+      for(i in 1:6){ 
+        f[[i]] = rnorm(p)
+      }
+      X =matrix(0,ncol=4*n, nrow=p)
+      X[,1:(2*n)] = f[[1]]
+      X[,(2*n+1):(4*n)] = f[[2]]
+      
+      X[,1:n] = X[,1:n]+f[[3]]
+      X[,(n+1):(2*n)] = X[,(n+1):(2*n)]+f[[4]]
+      X[,(2*n+1):(3*n)] = X[,(2*n+1):(3*n)] + f[[5]]
+      X[,(3*n+1):(4*n)] = X[,(3*n+1):(4*n)] + f[[6]]
+      X.svd = svd(X)
+      
+      # create X2
+      X2 = X- X.svd$u[,1:2] %*% diag(X.svd$d[1:2]) %*% t(X.svd$v[,1:2])
+      
+      # create X2n: noisy version
+      X2n <- X2 + rnorm(4*n*p,sd=3)
+      Sigma.hat <- cov(X2n)
+      Sigma.hat.nodiag <- Sigma.hat; diag(Sigma.hat.nodiag) <- NA
+      
+      fit0 <- flash(data=X2n, greedy.Kmax = 2, backfit=TRUE, verbose.lvl=0,
+                    prior.family=c(prior.normal(),prior.point.laplace()))
+      fit1 <- flash(data=Sigma.hat, prior.family=prior.point.laplace(), 
+              greedy.Kmax = 3, backfit=TRUE, verbose.lvl=0)
+      fit2 <- flash(data=Sigma.hat.nodiag, prior.family=prior.point.laplace(), 
+              greedy.Kmax = 3, backfit=TRUE, verbose.lvl=0)
+      
+      fig[[1]] <- fig.one.K2(fit0, title='on X')
+      fig[[2]] <- fig.one.K2(fit1, title='on cov')
+      fig[[3]] <- fig.one.K2(fit2, title='on cov w/o diag')
+      
+    grid.arrange(fig[[1]], fig[[2]], fig[[3]], ncol=3)
+}
+```
+
+### p=300
+
+```{r}
+plot.for.p.v2(set.p=300, seed=1)
+plot.for.p.v2(set.p=300, seed=2)
+plot.for.p.v2(set.p=300, seed=3)
+plot.for.p.v2(set.p=300, seed=4)
+plot.for.p.v2(set.p=300, seed=5)
+```
+
+### p=1k
+
+```{r}
+plot.for.p.v2(set.p=1000, seed=1)
+plot.for.p.v2(set.p=1000, seed=2)
+plot.for.p.v2(set.p=1000, seed=3)
+plot.for.p.v2(set.p=1000, seed=4)
+plot.for.p.v2(set.p=1000, seed=5)
+```
+
+
+### p=3k
+
+
+```{r}
+plot.for.p.v2(set.p=3000, seed=1)
+plot.for.p.v2(set.p=3000, seed=2)
+plot.for.p.v2(set.p=3000, seed=3)
+plot.for.p.v2(set.p=3000, seed=4)
+plot.for.p.v2(set.p=3000, seed=5)
+```
+
+
+### p=10k
+
+
+```{r}
+plot.for.p.v2(set.p=10000, seed=1)
+plot.for.p.v2(set.p=10000, seed=2)
+plot.for.p.v2(set.p=10000, seed=3)
+plot.for.p.v2(set.p=10000, seed=4)
+plot.for.p.v2(set.p=10000, seed=5)
+```
+
+
+### p=30k
+
+
+```{r}
+plot.for.p.v2(set.p=30000, seed=1)
+plot.for.p.v2(set.p=30000, seed=2)
+plot.for.p.v2(set.p=30000, seed=3)
+plot.for.p.v2(set.p=30000, seed=4)
+plot.for.p.v2(set.p=30000, seed=5)
+```
+
+
+### p=100k
+
+
+```{r}
+plot.for.p.v2(set.p=100000, seed=1)
+plot.for.p.v2(set.p=100000, seed=2)
+plot.for.p.v2(set.p=100000, seed=3)
+plot.for.p.v2(set.p=100000, seed=4)
+plot.for.p.v2(set.p=100000, seed=5)
+```
+
+
+### p=300k
+
+
+```{r}
+plot.for.p.v2(set.p=300000, seed=1)
+plot.for.p.v2(set.p=300000, seed=2)
+plot.for.p.v2(set.p=300000, seed=3)
+plot.for.p.v2(set.p=300000, seed=4)
+plot.for.p.v2(set.p=300000, seed=5)
 ```
