--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -10,6 +10,27 @@ editor_options:
 
 
 ## alternating flash
+
+:::: {style="display: flex;"}
+::: {style="min-width: 300px; max-width: 300px"}
+<img src="https://joonsukkang.github.io/mf/figure/tree_toy_altflash_1.Rmd/unnamed-chunk-7-2.png" width="400">
+:::
+::: {}
++ [altflash on tree toy data](tree_toy_altflash_1.html)
+  + priors are set as `g.l=g.f=gammamix(pi=c(0.1, 0.9), shape=c(1,1), scale=c(0,1))`
+  + two-step procedure is implemented. 
+    + the first step is to stabilize fit given `g.l,g.f`
+    + the second step is to fully update (including `g.l,g.f`)
+  + extracting `(1,0,0,0), (0,1,0,0), (0,0,1,0), (0,0,0,1)` is easy for noiseless data; harder for noisy data.
+    + given $K\geq4$, altflash always captures the desired pattern, which attains a higher elbo
+
+:::
+::::
+
+
+
+
+
 :::: {style="display: flex;"}
 ::: {style="min-width: 300px; max-width: 300px"}
 <img src="https://raw.githubusercontent.com/joonsukkang/mf/master/docs/figure/tree_toy_flashier.Rmd/unnamed-chunk-10-1.png" width="400">
